Small Changes for Direct Command LIne Usage

--- a/ML Implementations in CSharp.csproj
+++ b/ML Implementations in CSharp.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
-    <RootNamespace>ML_Implementations_in_CSharp</RootNamespace>
+    <RootNamespace>ml-implementation-cs</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
