Linear Regression Implemented

--- a/ml-implementation-cs.csproj
+++ b/ml-implementation-cs.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
-    <RootNamespace>ml-implementation-cs</RootNamespace>
+    <TargetFramework>net7.0</TargetFramework>
+    <RootNamespace>ml_implementation_cs</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
